--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,6 @@
-#SPDX-License-Identifier: MIT-0
 ---
 # defaults file for role-docker_setup
+
+docker_setup_username: ansible
+docker_setup_comment: Ansible User
+docker_setup_groupname: ansible
